# osw

./: CMakeLists.txt  test.txt  time_log.txt
allocator/allocator/src/: allocator_test_utils.cpp
allocator/allocator_boundary_tags/include/: allocator_boundary_tags.h
allocator/allocator_boundary_tags/src/: allocator_boundary_tags.cpp
allocator/allocator_boundary_tags/tests/: allocator_boundary_tags_tests.cpp
allocator/allocator_buddies_system/src/: allocator_buddies_system.cpp
allocator/allocator_buddies_system/tests/: allocator_buddies_system_tests.cpp
allocator/allocator_global_heap/include/: allocator_global_heap.h
allocator/allocator_global_heap/src/: allocator_global_heap.cpp
allocator/allocator_global_heap/tests/: allocator_global_heap_tests.cpp
allocator/allocator_red_black_tree/src/: allocator_red_black_tree.cpp
allocator/allocator_sorted_list/src/: allocator_sorted_list.cpp
associative_container/: CMakeLists.txt
associative_container/include/: associative_container.h
associative_container/search_tree/binary_search_tree/AVL_tree/include/: AVL_tree.h
associative_container/search_tree/binary_search_tree/AVL_tree/tests/: AVL_tree_tests.cpp
associative_container/search_tree/binary_search_tree/include/: binary_search_tree.h
associative_container/search_tree/binary_search_tree/red_black_tree/include/: red_black_tree.h
associative_container/search_tree/binary_search_tree/red_black_tree/tests/: red_black_tree_tests.cpp
associative_container/search_tree/binary_search_tree/tests/: binary_search_tree_tests.cpp
chain_of_responsibility/: CMakeLists.txt  chain_of_responsibility.h  handler.h
commands/: CMakeLists.txt  command.h  validation.h
containers/: CMakeLists.txt
containers/include/: collection.h  container.h  database.h  pool.h  scheme.h  student.h
dialog/: CMakeLists.txt  dialog.h
logger/client_logger/include/: client_logger.h  client_logger_builder.h
logger/client_logger/src/: client_logger.cpp  client_logger_builder.cpp
logger/client_logger/tests/: client_logger_tests.cpp
logger/logger/include/: logger.h
logger/logger/src/: logger.cpp
logger/server_logger/include/: server_logger.h  server_logger_builder.h
logger/server_logger/src/: server_logger.cpp  server_logger_builder.cpp
logger/server_logger/tests/: server_logger_tests.cpp
main/: CMakeLists.txt  main.cpp
(+13 files in other folders)
